# rust-template

./: Cargo.toml  Makefile.toml  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
benches/: bench.rs
crates/macros/: Cargo.toml
fuzz/: Cargo.toml  run.sh
fuzz/example/: example.rs
fuzz/example/in/: 1  2  3
src/: lib.rs
